update Swagger
