# storage/api-docs/api-docs.json
@@ -2,6 +2,9 @@
     "openapi": "3.0.0",
     "info": {
         "title": "Api",
+        "contact": {
+            "email": "ravluk2000@gmail.com"
+        },
         "version": "1.0.0"
     },
     "servers": [
@@ -11,12 +14,73 @@
         }
     ],
     "paths": {
+        "/login": {
+            "post": {
+                "tags": [
+                    "Authentication "
+                ],
+                "summary": "Authentication",
+                "description": "Login to use API",
+                "operationId": "login",
+                "requestBody": {
+                    "description": "Pass user credentials",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "phone",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "phone": {
+                                        "type": "string",
+                                        "example": "380123456789"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "password"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "default": []
+                    }
+                ]
+            }
+        },
         "/categories": {
             "get": {
                 "tags": [
                     "Category"
                 ],
-                "summary": "Transform the resource collection into an array.",
+                "summary": "Get categories information",
+                "description": "Returns categories data by id",
                 "operationId": "allCategories",
                 "responses": {
                     "200": {
@@ -41,8 +105,8 @@
                 "tags": [
                     "Category"
                 ],
-                "summary": "Get category information",
-                "description": "Returns category data",
+                "summary": "Get category information by id",
+                "description": "Returns category data by id",
                 "operationId": "getCategoryById",
                 "parameters": [
                     {
